fix: The back button has been implemented in the document upload, historial, machine historial, and rols paths, instead of the main screen.

--- a/bomberos-app/src/app/app.html
+++ b/bomberos-app/src/app/app.html
@@ -1,22 +1,23 @@
 <mat-toolbar class="main-toolbar" *ngIf="!isAuthPage()">
   <div class="toolbar-content">
-    <a routerLink="/" class="toolbar-logo-container"> 
-        <img src="/logo_bomberos.png" alt="Logo SIGBA" class="toolbar-logo">
+    <a routerLink="/" class="toolbar-logo-container">
+      <img src="/logo_bomberos.png" alt="Logo SIGBA" class="toolbar-logo" />
     </a>
-    
+
     <span class="toolbar-title">SIGBA</span>
-    
+
     <span class="toolbar-spacer"></span>
-    
-    <a *ngIf="showBackButton()" mat-flat-button class="back-button" routerLink="/historial">
+    <a *ngIf="showBackButton()" mat-flat-button class="back-button" routerLink="/modules">
       <mat-icon>arrow_back</mat-icon>
       Volver
     </a>
   </div>
 </mat-toolbar>
 
-<div class="app-container" 
-     [class.login-layout]="isAuthPage()" 
-     [class.dashboard-layout]="!isAuthPage()">
+<div
+  class="app-container"
+  [class.login-layout]="isAuthPage()"
+  [class.dashboard-layout]="!isAuthPage()"
+>
   <router-outlet></router-outlet>
 </div>
